# solana-retro

./: .gitignore  DEPLOY.MD  IMPROVEMENTS.md  README.md  RUN_JSON.md  SOLANA_README.md  docker-compose.yml  run.json.example
.github/workflows/: build-rpc-proxy.yml  deploy.yml  release-cli.yml
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
program/: Anchor.toml  README.md
program/programs/cartridge-storage/: Cargo.toml
program/programs/cartridge-storage/src/: lib.rs
rpc-proxy/: Dockerfile  README.md  config.example.json  docker-compose.yml  go.mod  main.go
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.d.ts  constants.js  constants.ts  decoder.d.ts  decoder.js  decoder.ts  errors.ts  index.ts  pda.d.ts  pda.js  pda.ts  types.d.ts  types.js  types.ts  utils.d.ts  utils.js  utils.ts
sdk/tests/: pda.test.ts  utils.test.ts
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  constants.js  main.js  polyfills.js  solana-rpc.js  style.css  utils.js
web/src/components/: EmulatorContainer.vue  GameSelector.vue  Header.vue  ProgramInfo.vue  WelcomeModal.vue
web/src/components/emulators/: DosEmulator.vue  GameBoyEmulator.vue  NesEmulator.vue
web/src/composables/: useCache.js  useDosEmulator.js  useGbEmulator.js  useNesEmulator.js  useSolanaCartridge.js  useSolanaCatalog.js
web/src/utils/: payloads.legacy.js
