[package]
name = "cartridge-storage"
version = "0.1.0"
description = "Solana program for on-chain cartridge/ROM storage with chunked data"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cartridge_storage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

